# agent-kappa

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: discouq-analysis.md  prior-art.md  research-findings.md  validation-plan.md
src/agent_kappa/: __init__.py  __main__.py  benchmark.py  diagnosis.py  gloss.py  metrics.py  voting.py
tests/: test_metrics.py
